Philosophers (#9)
* philosopher api

* no skip when cursor isn't used

* remote debugging

* remove unused import

* partial updates to open api spec for philosopher

* open api updates

* update spec; new dump

---------
